cloudformation/EC2-Instance.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Part 1 - Build a DBT stack with CloudFormation

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0d5eff06f840b45e9 # ImageID valid only in us-east-1 region
      InstanceType: t2.micro
      Tags :
          - Key: Name
            Value: AopsDBTInstance
      KeyName: Aops_Jenkins 
      SecurityGroupIds:
        - !Ref DBTSecurityGroup

  DBTSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [DBT-security-group1, dev]]
      GroupDescription: "Allow HTTP/HTTPS and SSH inbound and outbound traffic"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5439
          ToPort: 5439
          CidrIp: 0.0.0.0/0
  
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            echo "Updating the instance."
            yum update -y
            python -m install pip install --upgrade pip

            echo "Install the DBT."
            pip install dbt-core dbt-redshift
            
            echo "Create the dir for project."
            sudo mkdir dbtAnalyticsProject
            cd dbtAnalyticsProject

            echo "Initialize the dbt dir."
            dbt  init
